@@ -1,3 +1,7 @@
+20020721
+ - (stevesk) [auth-pam.c] merge cosmetic changes from solar's
+   openssh-3.4p1-owl-password-changing.diff
+
 20020720
  - (stevesk) [ssh-keygen.c] bug #231: always init/seed_rng().
 
